--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>capstone</title>
-    <link rel="stylesheet" href="./style/style.css">
-    <script src="./map_script.js"></script>
+
+
 
 </head>
 
 <body>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js" integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA==" crossorigin=""></script>
+    <link rel="stylesheet" href="styles/style.css" />
 
-    <div id="map"></div>
+    <div id="mapid"></div>
 
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
