--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="styles/style.css" />
 
     <div id="mapid"></div>
+    <a href="" id="theButton">Click Me</a>
+
 
     <script src="scripts/script.js"></script>
 </body>
