leaving for the day

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     <div id="mapid"></div>
     <a href="" id="theButton">Click Me</a>
 
+    <form class="" action="index.html" method="post">
+        <label for="Barton Creek">Barton Creek</label>
+        <input type="radio" name="radioGroup" id="radio1" value="Barton Creek">
+        <input id="days" type="text">
+        <button id="getSiteLoc"type="submit">Submit</button>
+    </form>
 
     <script src="scripts/script.js"></script>
 </body>
