--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,16 @@
 <body>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js" integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA==" crossorigin=""></script>
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 
     <link rel="stylesheet" href="styles/style.css" />
 
     <div id="mapid"></div>
     <a href="" id="theButton">Click Me</a>
+    <button id="theButton" type="button" name="button"></button>
 
-    <form class="" action="index.html" method="post">
-        <label for="Barton Creek">Barton Creek</label>
-        <input type="radio" name="radioGroup" id="radio1" value="Barton Creek">
-        <input id="days" type="text">
-        <button id="getSiteLoc"type="submit">Submit</button>
-    </form>
 
     <script src="scripts/script.js"></script>
+
 </body>
 
 </html>
