front end connections

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,11 @@
     <link rel="stylesheet" href="styles/style.css" />
 
     <div id="mapid"></div>
-    <a href="" id="theButton">Click Me</a>
+    <a href="" id="theButton">Get Stats</a>
     <button id="theButton" type="button" name="button"></button>
+    <a href="" id="calc">calcualte</a>
+    <button id="calc" type="button" name="button"></button>
+
 
 
     <script src="scripts/script.js"></script>
