--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -12,99 +12,94 @@
 <body>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js" integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA==" crossorigin=""></script>
-
+    <header>
+        <h1>Water Quality</h1>
+    </header>
     <link rel="stylesheet" href="styles/style.css" />
+    <div class="maincontainer">
+        <div class="mapandtable">
+            <div class="tables">
+                <div class="paramscontain">
+                    <table class="paramsdatatable">
+                        <h3 class="paramsheading">Paramerter Estimates</h3>
+                        <tr>
+                            <th>Variable</th>
+                            <th>Input Variables</th>
+                            <th>Parameter Estimate</th>
+                            <th>Pr>|t|</th>
+                        </tr>
+                        <tr>
+                            <th>Intercept</th>
+                            <td></td>
+                            <td><input id="param_intercip" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_intercip" type="text" value=""></td>
 
-    <div id="mapid"></div>
-    <a href="" id="theButton">Get Stats</a>
+                        </tr>
+                        <tr>
+                            <th>Water Temp (C)</th>
+                            <td><input id="m_wt_result" type="text" value=""></td>
+                            <td><input id="param_wt" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_wt" type="text" value=""></td>
+                        </tr>
+                        <tr>
+                            <th>PH</th>
+                            <td><input id="m_ph_result" type="text" value=""></td>
+                            <td><input id="param_ph" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_ph" type="text" value=""></td>
+                        </tr>
+                        <tr>
+                            <th>Dissolved O2</th>
+                            <td><input id="m_dis_result" type="text" value=""></td>
+                            <td><input id="param_dis" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_dis" type="text" value=""></td>
+                        </tr>
+                        <tr>
+                            <th>Turbulence</th>
+                            <td><input id="m_tur_result" type="text" value=""></td>
+                            <td><input id="param_tur" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_tur" type="text" value=""></td>
+                        </tr>
+                        <tr>
+                            <th>Days Since Rain</th>
+                            <td><input id="m_ds_rain" type="text" value=""></td>
+                            <td><input id="param_ds_rain" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_ds_rain" type="text" value=""></td>
+                        </tr>
+                        <tr>
+                            <th>Ambient Temp (C)</th>
+                            <td><input id="m_temp" type="text" value=""></td>
+                            <td><input id="param_amb_temp" type="text" value=""></td>
+                            <td><input class='tstat' id="tstat_amb_temp" type="text" value=""></td>
+                        </tr>
+                    </table>
+                    <div class="buttons">
+                        <a href="" id="theButton">Get Site Stats</a>
+                    </div>
+                </div>
+            </div>
+            <div id="mapid"></div>
 
-    <table class="inputtable">
-        <tr>
-            <th>Input Variables</th>
-        </tr>
-        <tr>
-            <th>Water Temp (C)</th>
-            <td><input id="m_wt_result" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>PH</th>
-            <td><input id="m_ph_result" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Dissolved O2</th>
-            <td><input id="m_dis_result" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Turbulence</th>
-            <td><input id="m_tur_result" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Days Since Rain</th>
-            <td><input id="m_ds_rain" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Ambient Temp (C)</th>
-            <td><input id="m_temp" type="text" value="test"></td>
-        </tr>
-    </table>
-    <table class="paramsdatatable">
-        <tr>
-            <th>Paramerter Estimates</th>
-        </tr>
-        <tr>
-            <th>Variable</th>
-            <th>Parameter Estimate</th>
-            <th>Pr>|t|</th>
-        </tr>
-        <tr>
-            <th>Intercept</th>
-            <td><input id="param_intercip" type="text" value="test"></td>
-            <td><input id="tstat_intercip" type="text" value="test"></td>
-
-        </tr>
-        <tr>
-            <th>Water Temp (C)</th>
-            <td><input id="param_wt" type="text" value="test"></td>
-            <td><input id="tstat_wt" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>PH</th>
-            <td><input id="param_ph" type="text" value="test"></td>
-            <td><input id="tstat_ph" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Dissolved O2</th>
-            <td><input id="param_dis" type="text" value="test"></td>
-            <td><input id="tstat_dis" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Turbulence</th>
-            <td><input id="param_tur" type="text" value="test"></td>
-            <td><input id="tstat_tur" type="text" value="test"></td>
-
-        </tr>
-        <tr>
-            <th>Days Since Rain</th>
-            <td><input id="param_ds_rain" type="text" value="test"></td>
-            <td><input id="tstat_ds_rain" type="text" value="test"></td>
-        </tr>
-        <tr>
-            <th>Ambient Temp (C)</th>
-            <td><input id="param_amb_temp" type="text" value="test"></td>
-            <td><input id="tstat_amb_temp" type="text" value="test"></td>
-        </tr>
-    </table>
-    <a href="" id="calc">Calculate</a>
-    <div>
-        <label for="m_result">E.Coli Estimate</label>
-        <div id="m_result"></div>
-        <label for="calc_hi_val">Hi Value Estimate</label>
-        <div id="calc_hi_val"></div>
+        </div>
+        <div class="discovery">
+            <div id='imgdiv'>
+                <img class="graphic" src="/assets/charts/3.png" alt="">
+            </div>
+            <div class="charts">
+                <h3>Predicted E.Coli Levels</h3>
+                <table class="resultstable">
+                    <tr>
+                        <th>E.Coli Estimate (colonies/100ml):</th>
+                        <td><input class="results" id="m_result" type="text" value="" readonly></td>
+                    </tr>
+                    <tr>
+                        <th>E.Coli Estimate @1std (colonies/100ml):</th>
+                        <td><input class="results" id="calc_hi_val" type="text" value=""></td>
+                    </tr>
+                </table>
+                <a href="" id="calc">Calculate</a>
+            </div>
+        </div>
     </div>
-    <div id ='imgdiv'>
-        <img src="" alt="">
-    </div>
-
 
 
     <script src="scripts/script.js"></script>
